--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -43,7 +43,7 @@ span.glyphicon-remove {
 /* Navbar styling */
 
 div.navbar-header a.navbar-brand {
-	color: white;
+	color: #41CFC0;
 }
 
 nav.navbar.navbar-inverse {
@@ -125,7 +125,7 @@ div.content-holder {
 }
 
 div.wait-background {
-	background: rgba(0, 173, 0, 0.57);
+	background: rgba(106, 211, 191, 0.57);
 	margin-top: 0px;
 	height: 100%;
 	text-align: center;
@@ -182,6 +182,8 @@ button.num-requests {
 	top: 30px;
 	padding: 0px 20px;
 	font-size: 24px;
+	background: #41CFC0;
+	border-color: #41CFC0;
 }
 
 div.btn-holder:last-child {
