--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -182,10 +182,14 @@ button.num-requests {
 	top: 30px;
 	padding: 0px 20px;
 	font-size: 24px;
-	background: #41CFC0;
-	border-color: #41CFC0;
 }
 
 div.btn-holder:last-child {
 	padding-bottom: 25px;
+}
+
+button.kogo-btn {
+	background: #41CFC0;
+	border-color: #41CFC0;
+	color: white !important;
 }
