--- a/kogo/templates/drivers/driver_login.html
+++ b/kogo/templates/drivers/driver_login.html
@@ -18,7 +18,7 @@
     <div class="form-group">
       <input id="id_password" name="password" placeholder="Password" type="password">
     </div>
-	  <button type="submit" class="btn btn-lg btn-primary">
+	  <button type="submit" class="btn btn-lg kogo-btn">
 	    Log in
 	  </button>
 	</form>
