--- a/kogo/templates/students/pickup_locations.html
+++ b/kogo/templates/students/pickup_locations.html
@@ -14,7 +14,7 @@
     	<h3 class="pickup-title">Pickup from:</h3>
       	{% for loc in starting_locations %}
       	<div class="btn-holder">
-          <button class="btn btn-danger num-requests request-shadow">{{loc|num_active_requests}}</button>
+          <button class="btn kogo-btn num-requests request-shadow">{{loc|num_active_requests}}</button>
           <form method="get" action="{% url 'dropoff_locations' %}">
             <input type="hidden" name="pickup" value="{{loc.name}}">
         		<button type="submit" class="shadow location-btn pickup btn btn-default btn-lg">
