--- a/kogo/templates/students/student_login.html
+++ b/kogo/templates/students/student_login.html
@@ -19,7 +19,7 @@
               {{ field }}
           </div>
       {% endfor %}
-      <button type="submit" class="btn btn-lg btn-primary">
+      <button type="submit" class="btn btn-lg kogo-btn">
         Log in
     </button>
     <a class="new-to-kogo" href="{% url 'registration_register' %}">  New to Kogo?
