--- a/kogo/templates/registration/registration_form.html
+++ b/kogo/templates/registration/registration_form.html
@@ -18,7 +18,7 @@
             {{ field }}
         </div>
     {% endfor %}
-    <button type="submit" class="btn btn-lg btn-primary">
+    <button type="submit" class="btn btn-lg kogo-btn">
 	    Create Account
 	</button>
 </form>
