--- a/kogo/templates/drivers/group_selection.html
+++ b/kogo/templates/drivers/group_selection.html
@@ -12,6 +12,8 @@
 {% block additional_javascript %}
 <script type="text/javascript" 
 		src="{{STATIC_URL}}js/group_selection.js"></script>
+<script type="text/javascript"
+		src="{{STATIC_URL}}js/driver_location.js"></script>
 {% endblock %}
 
 {% block content %}
