--- a/kogo/templates/drivers/ride_in_progress.html
+++ b/kogo/templates/drivers/ride_in_progress.html
@@ -25,3 +25,8 @@
 	</div>
 </div>
 {% endblock %}
+
+{% block additional_javascript %}
+<script type="text/javascript"
+		src="{{STATIC_URL}}js/driver_location.js"></script>
+{% endblock %}
