--- a/kogo/templates/drivers/start_ride_screen.html
+++ b/kogo/templates/drivers/start_ride_screen.html
@@ -2,6 +2,8 @@
 
 {% block additional_javascript %}
 <script type="text/javascript" src="{{STATIC_URL}}js/driver.js"></script>
+<script type="text/javascript"
+		src="{{STATIC_URL}}js/driver_location.js"></script>
 {% endblock %}
 
 {% block navbar_content %}
